# llamaindex-doubleword

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/agent-basic/: README.md  batched.py  pyproject.toml  realtime.py
examples/async-agents-research/: README.md  prompts.py  pyproject.toml  research.py  tools.py
examples/async-agents-research/results/benefits-of-batch-inference/: agent-tree.json  report.md  summary.json
llamaindex_doubleword/: __init__.py  _credentials.py  embeddings.py  llm.py
