[project]
name = "agent-basic"
version = "0.1.0"
description = "Basic tool-calling agent using DoublewordLLM with real-time and batch variants"
requires-python = ">=3.11"
dependencies = [
    "llamaindex-doubleword",
    "llama-index-core>=0.12.0",
]

[tool.uv.sources]
llamaindex-doubleword = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
