[project]
name = "async-agents-research"
version = "0.1.0"
description = "Recursive multi-agent research via LlamaIndex AgentWorkflow + llamaindex-doubleword (autobatcher)"
requires-python = ">=3.11"
dependencies = [
    "llamaindex-doubleword",
    "llama-index-core>=0.12.0",
    "requests>=2.31",
]

# When running this example out of the parent repo, the local package is
# picked up via the source tree path below. Replace with the published
# version once `llamaindex-doubleword` is on PyPI.
[tool.uv.sources]
llamaindex-doubleword = { path = "../..", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["async_agents_research"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
